<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactViewAcitvity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saludo"
        android:layout_gravity="center"
        android:paddingBottom="40dp"
        android:paddingTop="40dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:autofillHints="N control"
                android:id="@+id/edtncontrol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:id="@+id/edtnombre"
                android:inputType="textPersonName"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apes"
                android:id="@+id/edtapellidos"
                android:inputType="textPersonName"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/carrera"
                android:id="@+id/edtcarrera"
                android:inputType="textPersonName"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edad"
                android:id="@+id/edtEdad"
                android:inputType="number"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estatura"
                android:id="@+id/edtEstatura"
                android:inputType="numberDecimal"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peso"
                android:id="@+id/edtPeso"
                android:inputType="numberDecimal"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/desc"
                android:id="@+id/edtDescripcion"
                android:inputType="textPersonName"/>


        </LinearLayout>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="10">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:id="@+id/btnguardar"
        android:layout_weight="3"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ir"
        android:id="@+id/btnir"
        android:layout_weight="7"/>
</LinearLayout>

</LinearLayout>